{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 126,
  "lineage": "a7042068-3b3c-99fe-261a-880fb7d2cd8d",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "my-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:546759955220:vpc/vpc-0401b1fa648f2b60a",
            "cidr_block": "10.110.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0e67c27374140384a",
                "cidr_block": "10.110.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-981deefe",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0401b1fa648f2b60a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-097d2b70138754f69",
            "owner_id": "546759955220",
            "state": "available",
            "tags": {
              "CreationDate": "03-12-2021",
              "Environment": "development",
              "Name": "development-vpc-creating-vpc",
              "ProjectName": "vpc-creating",
              "Terraform": "true",
              "date": "02-14-2021",
              "env": "Development"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0d471c7b6759bcec6",
            "owner_id": "546759955220",
            "tags": {
              "CreationDate": "03-12-2021",
              "Environment": "development",
              "Name": "development-vpc-creating-vpc-igw",
              "ProjectName": "vpc-creating",
              "Terraform": "true",
              "date": "02-14-2021",
              "env": "Development"
            },
            "vpc_id": "vpc-0401b1fa648f2b60a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_vars"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d471c7b6759bcec6",
            "id": "r-rtb-08c7b7fa39bf2d59a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08c7b7fa39bf2d59a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.vpc_vars"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-018e6924cf75569de",
            "owner_id": "546759955220",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "CreationDate": "03-12-2021",
              "Environment": "development",
              "Name": "development-vpc-creating-vpc-rt-private-ap-southeast-1a",
              "ProjectName": "vpc-creating",
              "Terraform": "true",
              "date": "02-14-2021",
              "env": "Development"
            },
            "vpc_id": "vpc-0401b1fa648f2b60a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc_vars"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c3564cebee0de4cd",
            "owner_id": "546759955220",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "CreationDate": "03-12-2021",
              "Environment": "development",
              "Name": "development-vpc-creating-vpc-rt-private-ap-southeast-1b",
              "ProjectName": "vpc-creating",
              "Terraform": "true",
              "date": "02-14-2021",
              "env": "Development"
            },
            "vpc_id": "vpc-0401b1fa648f2b60a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc_vars"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02df6ca12dd92c96c",
            "owner_id": "546759955220",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "CreationDate": "03-12-2021",
              "Environment": "development",
              "Name": "development-vpc-creating-vpc-rt-private-ap-southeast-1c",
              "ProjectName": "vpc-creating",
              "Terraform": "true",
              "date": "02-14-2021",
              "env": "Development"
            },
            "vpc_id": "vpc-0401b1fa648f2b60a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc_vars"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08c7b7fa39bf2d59a",
            "owner_id": "546759955220",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d471c7b6759bcec6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CreationDate": "03-12-2021",
              "Environment": "development",
              "Name": "development-vpc-creating-vpc-rt-public",
              "ProjectName": "vpc-creating",
              "Terraform": "true",
              "date": "02-14-2021",
              "env": "Development"
            },
            "vpc_id": "vpc-0401b1fa648f2b60a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc_vars"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:546759955220:subnet/subnet-07d8c9aa23d328bd2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.110.1.0/24",
            "id": "subnet-07d8c9aa23d328bd2",
            "map_public_ip_on_launch": false,
            "owner_id": "546759955220",
            "tags": {
              "CreationDate": "03-12-2021",
              "Environment": "development",
              "Name": "development-vpc-creating-vpc-subnet-private-ap-southeast-1a",
              "ProjectName": "vpc-creating",
              "Terraform": "true",
              "date": "02-14-2021",
              "env": "Development"
            },
            "vpc_id": "vpc-0401b1fa648f2b60a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc_vars"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:546759955220:subnet/subnet-0432fb09d0dea7803",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.110.2.0/24",
            "id": "subnet-0432fb09d0dea7803",
            "map_public_ip_on_launch": false,
            "owner_id": "546759955220",
            "tags": {
              "CreationDate": "03-12-2021",
              "Environment": "development",
              "Name": "development-vpc-creating-vpc-subnet-private-ap-southeast-1b",
              "ProjectName": "vpc-creating",
              "Terraform": "true",
              "date": "02-14-2021",
              "env": "Development"
            },
            "vpc_id": "vpc-0401b1fa648f2b60a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc_vars"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:546759955220:subnet/subnet-04172c6099a05015e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.110.3.0/24",
            "id": "subnet-04172c6099a05015e",
            "map_public_ip_on_launch": false,
            "owner_id": "546759955220",
            "tags": {
              "CreationDate": "03-12-2021",
              "Environment": "development",
              "Name": "development-vpc-creating-vpc-subnet-private-ap-southeast-1c",
              "ProjectName": "vpc-creating",
              "Terraform": "true",
              "date": "02-14-2021",
              "env": "Development"
            },
            "vpc_id": "vpc-0401b1fa648f2b60a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc_vars"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:546759955220:subnet/subnet-0e25c9379d8b5790a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.110.101.0/24",
            "id": "subnet-0e25c9379d8b5790a",
            "map_public_ip_on_launch": true,
            "owner_id": "546759955220",
            "tags": {
              "CreationDate": "03-12-2021",
              "Environment": "development",
              "Name": "development-vpc-creating-vpc-subnet-public-ap-southeast-1a",
              "ProjectName": "vpc-creating",
              "Terraform": "true",
              "date": "02-14-2021",
              "env": "Development"
            },
            "vpc_id": "vpc-0401b1fa648f2b60a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc_vars"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:546759955220:subnet/subnet-0a3519559476390ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.110.102.0/24",
            "id": "subnet-0a3519559476390ec",
            "map_public_ip_on_launch": true,
            "owner_id": "546759955220",
            "tags": {
              "CreationDate": "03-12-2021",
              "Environment": "development",
              "Name": "development-vpc-creating-vpc-subnet-public-ap-southeast-1b",
              "ProjectName": "vpc-creating",
              "Terraform": "true",
              "date": "02-14-2021",
              "env": "Development"
            },
            "vpc_id": "vpc-0401b1fa648f2b60a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc_vars"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:546759955220:subnet/subnet-08162eea1863aeaa6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.110.103.0/24",
            "id": "subnet-08162eea1863aeaa6",
            "map_public_ip_on_launch": true,
            "owner_id": "546759955220",
            "tags": {
              "CreationDate": "03-12-2021",
              "Environment": "development",
              "Name": "development-vpc-creating-vpc-subnet-public-ap-southeast-1c",
              "ProjectName": "vpc-creating",
              "Terraform": "true",
              "date": "02-14-2021",
              "env": "Development"
            },
            "vpc_id": "vpc-0401b1fa648f2b60a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc_vars"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_vars",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:546759955220:vpc/vpc-0401b1fa648f2b60a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.110.0.0/16",
            "default_network_acl_id": "acl-082a591e8d6dd2f75",
            "default_route_table_id": "rtb-097d2b70138754f69",
            "default_security_group_id": "sg-0ba819fa9ae562763",
            "dhcp_options_id": "dopt-981deefe",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0401b1fa648f2b60a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-097d2b70138754f69",
            "owner_id": "546759955220",
            "tags": {
              "CreationDate": "03-12-2021",
              "Environment": "development",
              "Name": "development-vpc-creating-vpc",
              "ProjectName": "vpc-creating",
              "Terraform": "true",
              "date": "02-14-2021",
              "env": "Development"
            }
          }
        }
      ]
    }
  ]
}